versioned_docs/version-7.0/client-api/data-subscriptions/advanced-topics/content/_maintenance-operations-csharp.mdx
import Admonition from '@theme/Admonition';
import Tabs from '@theme/Tabs';
import TabItem from '@theme/TabItem';
import CodeBlock from '@theme/CodeBlock';

<Admonition type="note" title="">

* This article covers data subscriptions maintenance operations.  

* In this page:  
   * [DocumentSubscriptions class](../../../../client-api/data-subscriptions/advanced-topics/maintenance-operations.mdx#documentsubscriptions-class)  
   * [Delete subscription](../../../../client-api/data-subscriptions/advanced-topics/maintenance-operations.mdx#delete-subscription)  
   * [Disabling subscription](../../../../client-api/data-subscriptions/advanced-topics/maintenance-operations.mdx#disable-subscription)  
   * [Enable subscription](../../../../client-api/data-subscriptions/advanced-topics/maintenance-operations.mdx#enable-subscription)  
   * [Update subscription](../../../../client-api/data-subscriptions/advanced-topics/maintenance-operations.mdx#update-subscription)
   * [Drop Connection](../../../../client-api/data-subscriptions/advanced-topics/maintenance-operations.mdx#drop-connection)
   * [Get subscription state](../../../../client-api/data-subscriptions/advanced-topics/maintenance-operations.mdx#get-subscription-state)  

</Admonition>
## DocumentSubscriptions class

The `DocumentSubscriptions` class is the class that manages all interaction with the data subscriptions.  
The class is available through `DocumentStore`'s `Subscriptions` property.

| Method Signature                                                                                              | Return type                     | Description                                                                                                                                         |
|---------------------------------------------------------------------------------------------------------------|---------------------------------|-----------------------------------------------------------------------------------------------------------------------------------------------------| 
| **Create&lt;T&gt;(SubscriptionCreationOptions&lt;T&gt; options, string database)**                                        | `string`                        | Create a new data subscription.                                                                                                                     |
| **Create(SubscriptionCreationOptions criteria, string database)**                                             | `string`                        | Create a new data subscription.                                                                                                                     |
| **Create(SubscriptionCreationOptions criteria, string database)**                                             | `string`                        | Create a new data subscription.                                                                                                                     |
| **CreateAsync&lt;T&gt;(SubscriptionCreationOptions&lt;T&gt; options, string database)**                                   | `Task<string>`                  | Create a new data subscription.                                                                                                                     |
| **CreateAsync&lt;T&gt;(Expression&lt;Func&lt;T, bool&gt;&gt; predicate, SubscriptionCreationOptions options, string database)** | `Task<string>`                  | Create a new data subscription.                                                                                                                     |
| **Delete(string name, string database)**                                                                      | `void`                          | Delete subscription.                                                                                                                                |
| **DeleteAsync(string name, string database)**                                                                 | `Task`                          | Delete subscription.                                                                                                                                |
| **DropConnection(string name, string database)**                                                              | `void`                          | Drop all existing subscription connections with workers.                                                                                            |
| **DropConnectionAsync(string name, string database)**                                                         | `Task`                          | Drop all existing subscription connections with workers.                                                                                            |
| **DropSubscriptionWorker&lt;T&gt;(SubscriptionWorker&lt;T&gt; worker, string database = null)**                           | `void`                          | Drop an existing subscription connection with a worker                                                                                              |
| **Enable(string name, string database)**                                                                      | `void`                          | Enable existing subscription.                                                                                                                       |
| **EnableAsync(string name, string database)**                                                                 | `Task`                          | Enable existing subscription.                                                                                                                       |
| **Disable(string name, string database)**                                                                     | `void`                          | Disable existing subscription.                                                                                                                      |
| **DisableAsync(string name, string database)**                                                                | `Task`                          | Disable existing subscription.                                                                                                                      |
| **GetSubscriptions(int start, int take, string database)**                                                    | `List<SubscriptionState>`       | Returns subscriptions list.                                                                                                                         |
| **GetSubscriptionsAsync(int start, int take, string database)**                                               | `Task<List<SubscriptionState>>` | Returns subscriptions list.                                                                                                                         |
| **GetSubscriptionState(string subscriptionName, string database)**                                            | `SubscriptionState `            | Get specific subscription state.                                                                                                                    |
| **GetSubscriptionStateAsync(string subscriptionName, string database)**                                       | `Task<SubscriptionState> `      | Get specific subscription state.                                                                                                                    |
| **GetSubscriptionWorker&lt;T&gt;(string subscriptionName, string database)**                                        | `SubscriptionWorker<T>`         | Generate a subscription worker, using default configurations, that processes documents deserialized to `T` type .                                   |
| **GetSubscriptionWorker(string subscriptionName, string database)**                                           | `SubscriptionWorker<dynamic>`   | Generate a subscription worker, using default configurations, that processes documents in its raw `BlittableJsonReader`, wrapped by dynamic object. |
| **GetSubscriptionWorker(SubscriptionWorkerOptions options, string database)**                                 | `SubscriptionWorker<T>`         | Generate a subscription worker, using default configurations, that processes documents deserialized to `T` type .                                   |
| **GetSubscriptionWorker(SubscriptionWorkerOptions options, string database)**                                 | `SubscriptionWorker<dynamic>`   | Generate a subscription worker, using default configurations, that processes documents in its raw `BlittableJsonReader`, wrapped by dynamic object. |
| **Update(SubscriptionUpdateOptions options, string database = null)**                                         | `string`                        | Update an existing data subscription.                                                                                                               |
| **UpdateAsync(SubscriptionUpdateOptions options, string database = null, CancellationToken token = default)** | `Task<string>`                  | Update an existing data subscription.                                                                                                               |



## Delete subscription

Subscriptions can be entirely deleted from the system.  

This operation can be very useful in ad-hoc subscription scenarios when a lot of subscriptions tasks information may accumulate, making tasks management very hard.  

<TabItem value="interface_subscription_deletion" label="interface_subscription_deletion">
<CodeBlock language="csharp">
{`void Delete(string name, string database = null);
Task DeleteAsync(string name, string database = null, CancellationToken token = default);
`}
</CodeBlock>
</TabItem>

usage: 

<TabItem value="subscription_deletion" label="subscription_deletion">
<CodeBlock language="csharp">
{`store.Subscriptions.Delete(subscriptionName);
`}
</CodeBlock>
</TabItem>



## Disable subscription

Existing subscription tasks can be disabled from the client.

<TabItem value="interface_subscription_disabling" label="interface_subscription_disabling">
<CodeBlock language="csharp">
{`void Disable(string name, string database = null);
Task DisableAsync(string name, string database = null, CancellationToken token = default);
`}
</CodeBlock>
</TabItem>

usage: 

<TabItem value="subscription_disabling" label="subscription_disabling">
<CodeBlock language="csharp">
{`store.Subscriptions.Disable(subscriptionName);
`}
</CodeBlock>
</TabItem>



## Enable subscription

Existing subscription tasks can be enabled from the client.  
This operation can be useful for already disabled subscriptions.

<TabItem value="interface_subscription_enabling" label="interface_subscription_enabling">
<CodeBlock language="csharp">
{`void Enable(string name, string database = null);
Task EnableAsync(string name, string database = null, CancellationToken token = default);
`}
</CodeBlock>
</TabItem>

usage: 

<TabItem value="subscription_enabling" label="subscription_enabling">
<CodeBlock language="csharp">
{`store.Subscriptions.Enable(subscriptionName);
`}
</CodeBlock>
</TabItem>



## Update subscription

See [examples](../../../../client-api/data-subscriptions/creation/examples.mdx#update-existing-subscription) 
and [API description](../../../../client-api/data-subscriptions/creation/api-overview.mdx#update-subscription).  

<TabItem value="updating_subscription" label="updating_subscription">
<CodeBlock language="csharp">
{`string Update(SubscriptionUpdateOptions options, string database = null);

Task<string> UpdateAsync(SubscriptionUpdateOptions options, string database = null,
                    CancellationToken token = default);
`}
</CodeBlock>
</TabItem>



## Drop connection

Active subscription connections established by workers can be dropped remotely from the client.  
Once dropped, the worker will not attempt to reconnect to the server.

<TabItem value="interface_subscription_dropping" label="interface_subscription_dropping">
<CodeBlock language="csharp">
{`void DropConnection(string name, string database = null);
Task DropConnectionAsync(string name, string database = null, CancellationToken token = default);
`}
</CodeBlock>
</TabItem>

usage:

<TabItem value="connection_dropping" label="connection_dropping">
<CodeBlock language="csharp">
{`store.Subscriptions.DropConnection(subscriptionName);
`}
</CodeBlock>
</TabItem>



## Get subscription state

<TabItem value="interface_subscription_state" label="interface_subscription_state">
<CodeBlock language="csharp">
{`SubscriptionState GetSubscriptionState(string subscriptionName, string database = null);
Task<SubscriptionState> GetSubscriptionStateAsync(string subscriptionName, string database = null, CancellationToken token = default);
`}
</CodeBlock>
</TabItem>

usage: 

<TabItem value="subscription_state" label="subscription_state">
<CodeBlock language="csharp">
{`var subscriptionState = store.Subscriptions.GetSubscriptionState(subscriptionName);
`}
</CodeBlock>
</TabItem>

<Admonition type="info" title="">

##### SubscriptionState

| Member                                    | Type        | Description                                                                                                                                                 |
|-------------------------------------------|-------------|-------------------------------------------------------------------------------------------------------------------------------------------------------------| 
| **Query**                                 | `string`    | Subscription's RQL like query.                                                                                                                              |
| **LastBatchAckTime**                      | `DateTime?` | Last time a batch processing progress was acknowledged.                                                                                                     |
| **NodeTag**                               | `string`    | Processing server's node tag.                                                                                                                               |
| **MentorNode**                            | `string`    | The mentor node that was manually set.                                                                                                                      |
| **SubscriptionName**                      | `string`    | The subscription's name, which is also its unique identifier.                                                                                               |
| **SubscriptionId**                        | `long`      | Subscription's internal identifier (cluster's operation etag during subscription creation).                                                                 |
| **ChangeVectorForNextBatchStartingPoint** | `string`    | The Change Vector from which the subscription will begin sending documents.&lt;br.This value is updated on batch acknowledgement and can also be set manually. |
| **Disabled**                              | `bool`      | If `true`, subscription will not allow workers to connect.                                                                                                    |
| **LastClientConnectionTime**              | `DateTime?` | Time when last client was connected (value sustained after disconnection).                                                                                  |                

</Admonition>




